Improved chat collapse, remove double forensic ripple, fix end game before start button

--- a/UI/src/app/core/forensic/forensic.component.scss
+++ b/UI/src/app/core/forensic/forensic.component.scss
@@ -66,8 +66,8 @@ app-forensic-card {
     grid-template-rows: 1fr 2fr;
   }
   .container.chat-collapsed {
-    grid-template-columns: 1fr;
-    grid-template-rows: auto 40px;
+    grid-template-columns: auto;
+    grid-template-rows: auto;
   }
 }
 
@@ -76,7 +76,7 @@ app-forensic-card {
     grid-template-columns: 4fr 3fr;
   }
   .container.chat-collapsed {
-    grid-template-columns: auto 40px;
+    grid-template-columns: auto;
   }
 }
 
@@ -85,7 +85,7 @@ app-forensic-card {
     grid-template-columns: 2fr 1fr;
   }
   .container.chat-collapsed {
-    grid-template-columns: auto 40px;
+    grid-template-columns: auto;
   }
 }
 
