--- a/UI/src/app/shared/components/chat/chat.component.scss
+++ b/UI/src/app/shared/components/chat/chat.component.scss
@@ -77,3 +77,17 @@
 .chat-title {
   padding-left: var(--space-4);
 }
+
+.chat-collapsed :host {
+  position: fixed;
+  bottom: 0;
+  right: 0;
+}
+
+.collapsed-chat-button {
+  background-color: var(--accent-color);
+  height: 50px;
+  width: 50px;
+  border-radius: 25px;
+  margin: var(--space-4);
+}
